# hyperspot

./: CHANGELOG.md  Cargo.toml  Makefile  rust-toolchain.toml
.claude/commands/: cypilot.md
.claude/skills/cypilot/: SKILL.md
.cursor/rules/: cypilot.mdc
.cypilot-adapter/: artifacts.json
.cypilot-adapter/kits/cf-sdlc/: constraints.json  rules.md
.cypilot-adapter/kits/cf-sdlc/artifacts/ADR/: rules.md
.cypilot-adapter/kits/cf-sdlc/artifacts/DECOMPOSITION/: rules.md
.cypilot-adapter/kits/cf-sdlc/artifacts/DESIGN/: rules.md
.cypilot-adapter/kits/cf-sdlc/artifacts/FEATURE/: rules.md
.cypilot-adapter/kits/cf-sdlc/artifacts/PRD/: rules.md
.cypilot-adapter/kits/cf-sdlc/codebase/: rules.md
.github/prompts/: cypilot.prompt.md
.windsurf/skills/cypilot/: SKILL.md
apps/gts-docs-validator/src/: scanner.rs  validator.rs
apps/hyperspot-server/: Cargo.toml
apps/hyperspot-server/src/: registered_modules.rs
config/: e2e-local.yaml  quickstart-windows.yaml  quickstart.yaml
docs/: QUICKSTART_GUIDE.md
docs/arch/authorization/: AUTHZ_USAGE_SCENARIOS.md  DESIGN.md  TENANT_MODEL.md
docs/checklists/: ADR.md  DECOMPOSITION.md  DESIGN.md  FEATURE.md  PRD.md
docs/modkit_unified_system/: 01_overview.md  06_secure_orm_db_access.md  07_odata_pagination_select_filter.md  10_checklists_and_templates.md
docs/spec-templates/cf-sdlc/ADR/: template.md
docs/spec-templates/cf-sdlc/ADR/examples/: 0001-cpt-todo-app-adr-local-storage.md  0002-cpt-todo-app-adr-optimistic-ui.md  0003-cpt-todo-app-adr-browser-support.md
docs/spec-templates/cf-sdlc/DECOMPOSITION/: template.md
docs/spec-templates/cf-sdlc/DECOMPOSITION/examples/: example.md
docs/spec-templates/cf-sdlc/DESIGN/: template.md
docs/spec-templates/cf-sdlc/DESIGN/examples/: example.md
docs/spec-templates/cf-sdlc/FEATURE/: template.md
docs/spec-templates/cf-sdlc/FEATURE/examples/: 0001-cpt-todo-app-feature-core.md  0002-cpt-todo-app-feature-logic.md  0003-cpt-todo-app-feature-sync.md
docs/spec-templates/cf-sdlc/PRD/: template.md
docs/spec-templates/cf-sdlc/PRD/examples/: example.md
dylint_lints/: Cargo.toml
dylint_lints/de01_contract_layer/de0110_no_schema_for_on_gts_structs/: Cargo.toml
dylint_lints/de09_gts_layer/de0901_gts_string_pattern/: Cargo.toml
dylint_lints/de09_gts_layer/de0902_no_schema_for_on_gts_structs/: Cargo.toml
examples/modkit/users-info/users-info/: Cargo.toml
examples/modkit/users-info/users-info-sdk/src/: errors.rs
libs/modkit-auth/src/: axum_ext.rs
libs/modkit-db-macros/src/: lib.rs  scopable.rs
libs/modkit-db-macros/tests/: ui.rs
libs/modkit-db-macros/tests/ui/: err_pep_duplicate_property.rs  err_pep_duplicate_property.stderr  err_pep_reserved_id.rs  err_pep_reserved_id.stderr  err_pep_reserved_owner_id.rs  err_pep_reserved_owner_id.stderr  err_pep_reserved_owner_tenant_id.rs  err_pep_reserved_owner_tenant_id.stderr  err_unknown_attr.stderr  err_unrestricted_with_pep.rs  err_unrestricted_with_pep.stderr  ok_with_pep_prop.rs
libs/modkit-db/src/secure/: cond.rs  db_ops.rs  docs.rs  entity_traits.rs  provider.rs  secure_conn.rs  select.rs  tests.rs
libs/modkit-db/tests/: db_generic.rs  params_integration.rs  secure_odata_sqlite.rs
libs/modkit-db/tests/sqlite/: secure_insert_tenant_validation.rs  secure_update_tenant_safety.rs  transaction.rs
libs/modkit-sdk/examples/: secured_client.rs
libs/modkit-sdk/src/: secured.rs
libs/modkit-security/: Cargo.toml
libs/modkit-security/src/: access_scope.rs  context.rs  lib.rs  prelude.rs
libs/modkit-security/tests/: bin_codec.rs  root_constants.rs
libs/modkit/src/api/: openapi_registry.rs  operation_builder.rs
libs/modkit/src/plugins/: mod.rs
libs/modkit/tests/: integration_test.rs
libs/system-sdks/: Cargo.toml
libs/system-sdks/sdks/directory/: Cargo.toml
modules/credstore/docs/: DESIGN.md  PRD.md
modules/file-parser/: Cargo.toml  QUICKSTART.md  README.md
modules/file-parser/docs/: DESIGN.md  PRD.md
modules/file-parser/src/: config.rs  module.rs
modules/file-parser/src/domain/: error.rs  ir.rs  service.rs
modules/llm-gateway/docs/: DESIGN.md  PRD.md
modules/llm-gateway/docs/ADR/: 0001-fdd-llmgw-adr-stateless.md  0002-fdd-llmgw-adr-pass-through.md  0003-fdd-llmgw-adr-file-storage.md  0004-fdd-llmgw-adr-circuit-breaking.md
modules/model-registry/docs/: PRD.md
modules/simple-user-settings/simple-user-settings/: Cargo.toml
modules/simple-user-settings/simple-user-settings/src/: module.rs
modules/simple-user-settings/simple-user-settings/src/api/rest/: routes.rs
modules/simple-user-settings/simple-user-settings/src/domain/: error.rs  repo.rs  service.rs  service_test.rs
modules/simple-user-settings/simple-user-settings/src/infra/storage/: sea_orm_repo.rs
modules/system/api-gateway/: Cargo.toml
modules/system/api-gateway/src/: auth.rs  config.rs  module.rs
modules/system/api-gateway/tests/: auth_disabled_root_context.rs  auth_middleware.rs  body_limit_tests.rs  cors_tests.rs  license_middleware.rs  middleware_order.rs  mime_validation_integration.rs  rate_limit_tests.rs
modules/system/authn-resolver/: README.md
modules/system/authn-resolver/authn-resolver/: Cargo.toml
modules/system/authn-resolver/authn-resolver-sdk/: Cargo.toml
modules/system/authz-resolver/: README.md
modules/system/authz-resolver/authz-resolver/: Cargo.toml
modules/system/authz-resolver/authz-resolver-sdk/: Cargo.toml
modules/system/authz-resolver/authz-resolver/src/: config.rs  lib.rs  module.rs
modules/system/authz-resolver/authz-resolver/src/domain/: error.rs  local_client.rs  mod.rs  service.rs
modules/system/module-orchestrator/: Cargo.toml
modules/system/tenant-resolver/tenant-resolver/: Cargo.toml
modules/system/types-registry/types-registry/: Cargo.toml
modules/system/types-registry/types-registry-sdk/: Cargo.toml
scripts/: ci.py
testing/e2e/: README.md
testing/e2e/modules/oagw/: mock_upstream.py  test_management_lifecycle.py
testing/e2e/modules/types_registry/: test_types_registry_get.py  test_types_registry_list.py  test_types_registry_register.py
(+76 files in other folders)
