[package]
name = "hyperspot-server"
version.workspace = true
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
users-info-example = ["dep:users-info"]
oop-example = ["dep:calculator-gateway", "dep:calculator"]
single-tenant = ["dep:single-tenant-tr-plugin"]
static-tenants = ["dep:static-tr-plugin"]
static-authn = ["dep:static-authn-plugin"]
static-authz = ["dep:static-authz-plugin"]
otel = ["modkit/otel"]

[dependencies]
mimalloc = { version = "0.1" }
# Local crates
modkit = { workspace = true, features = ["bootstrap"] }

# System modules
api_gateway = { package = "cf-api-gateway", path = "../../modules/system/api-gateway" }
grpc_hub = { package = "cf-grpc-hub", path = "../../modules/system/grpc-hub" }
module_orchestrator = { package = "cf-module-orchestrator", path = "../../modules/system/module-orchestrator" }
types = { path = "../../modules/system/types" }
types_registry = { package = "cf-types-registry", path = "../../modules/system/types-registry/types-registry" }
tenant-resolver = { package = "cf-tenant-resolver", path = "../../modules/system/tenant-resolver/tenant-resolver" }
authn-resolver = { package = "cf-authn-resolver", path = "../../modules/system/authn-resolver/authn-resolver" }
authz-resolver = { package = "cf-authz-resolver", path = "../../modules/system/authz-resolver/authz-resolver" }

# Optional tenant resolver plugins
single-tenant-tr-plugin = { package = "cf-single-tenant-tr-plugin", path = "../../modules/system/tenant-resolver/plugins/single-tenant-tr-plugin", optional = true }
static-tr-plugin = { package = "cf-static-tr-plugin", path = "../../modules/system/tenant-resolver/plugins/static-tr-plugin", optional = true }

# Optional authn/authz plugins
static-authn-plugin = { package = "cf-static-authn-plugin", path = "../../modules/system/authn-resolver/plugins/static-authn-plugin", optional = true }
static-authz-plugin = { package = "cf-static-authz-plugin", path = "../../modules/system/authz-resolver/plugins/static-authz-plugin", optional = true }

# user modules
file_parser = { package = "cf-file-parser", path = "../../modules/file-parser" }
nodes_registry = { package = "cf-nodes-registry", path = "../../modules/system/nodes-registry/nodes-registry" }
simple_user_settings = { package = "cf-simple-user-settings", path = "../../modules/simple-user-settings/simple-user-settings" }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }

# Optional example module
users-info = { path = "../../examples/modkit/users-info/users-info", optional = true }
calculator-gateway = { path = "../../examples/oop-modules/calculator-gateway/calculator-gateway", optional = true }
calculator = { path = "../../examples/oop-modules/calculator/calculator", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde-saphyr = { workspace = true }
