[package]
name = "cf-modkit-security"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit security library"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["authentication"]

[lib]
name = "modkit_security"

[lints]
workspace = true

[dependencies]
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true }
postcard = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
