[package]
name = "cf-simple-user-settings"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Simple settings module"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["web-programming"]

[lib]
name = "simple_user_settings"

[lints]
workspace = true

[dependencies]
simple-user-settings-sdk = { package = "cf-simple-user-settings-sdk", version = "0.1.0", path = "../simple-user-settings-sdk" }

# AuthZ resolver for authorization (PEP flow)
authz-resolver-sdk = { package = "cf-authz-resolver-sdk", path = "../../../modules/system/authz-resolver/authz-resolver-sdk" }

anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
axum = { workspace = true, features = ["macros"] }
uuid = { workspace = true }
arc-swap = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-time",
    "with-uuid",
] }
sea-orm-migration = { workspace = true }
thiserror = { workspace = true }

modkit = { workspace = true }
modkit-auth = { workspace = true }
modkit-db = { workspace = true }
modkit-db-macros = { workspace = true }
modkit-errors = { workspace = true }
modkit-errors-macro = { workspace = true }
modkit-security = { workspace = true }
modkit-macros = { workspace = true }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
modkit-db = { workspace = true, features = ["sqlite"] }
