[package]
name = "cf-authz-resolver"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AuthZ resolver module - discovers and routes to plugins"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["authorization"]

[lib]
name = "authz_resolver"

[lints]
workspace = true

[dependencies]
# Local dependencies
authz-resolver-sdk = { package = "cf-authz-resolver-sdk", version = "0.1.0", path = "../authz-resolver-sdk" }
types-registry-sdk = { package = "cf-types-registry-sdk", version = "0.1.2", path = "../../types-registry/types-registry-sdk" }

# ModKit dependencies
modkit = { workspace = true }
modkit-macros = { workspace = true }
modkit-security = { workspace = true }

# Async runtime
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# Data types
uuid = { workspace = true }

# Error handling and serialization
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Required by modkit::module macro
inventory = { workspace = true }

# Logging
tracing = { workspace = true }
